# jace

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES_1.1.0.md  docker-compose.yml  pyproject.toml  renovate.json
.github/workflows/: docker-image.yml  publish-image.yml  tests.yml
examples/: cards.txt
jace/: __init__.py  cli.py  config.py  exchange.py  importer.py  logs.py  maintenance.py  models.py  moxfield.py  parser.py  refresher.py  scryfall.py  storage.py  web.py
jace/static/: app.css  app.js  index.html
mtg_price_tracker/: __init__.py  cli.py  config.py  importer.py  models.py  moxfield.py  parser.py  refresher.py  scryfall.py  storage.py  web.py
mtg_price_tracker/static/: app.css  app.js  index.html
tests/: test_config.py  test_exchange.py  test_importer.py  test_logs.py  test_moxfield.py  test_parser.py  test_refresher.py  test_scryfall.py  test_storage.py  test_web.py
