[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jace"
version = "0.1.0"
description = "Track Magic: The Gathering card prices with Scryfall snapshots."
requires-python = ">=3.11"
dependencies = ["psycopg[binary]>=3.2,<4"]

[project.scripts]
jace = "jace.cli:main"

[tool.setuptools.packages.find]
include = ["jace*"]

[tool.setuptools.package-data]
jace = ["static/*"]
