[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jace"
version = "1.1.6"
description = "Track Magic: The Gathering card prices with Scryfall snapshots."
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = ["psycopg[binary]>=3.3.4,<4"]

[project.scripts]
jace = "jace.cli:main"

[tool.setuptools.packages.find]
include = ["jace*"]

[tool.setuptools.package-data]
jace = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
